tests/compile_fail/as_mut/union.stderr
error: `AsMut` cannot be derived for unions
 --> tests/compile_fail/as_mut/union.rs:2:1
  |
2 | union Foo {
  | ^^^^^
